[gd_scene load_steps=2 format=3 uid="uid://b8k7v4w3l2nao"]

[ext_resource type="Script" path="res://menus/OptionsMenu.gd"      id=1]
[ext_resource type="Script" path="res://menus/widgets/UIButton.gd" id=2]

[node name="OptionsMenu" type="Control"]
layout_mode    = 3
anchors_preset = 15
anchor_right   = 1.0
anchor_bottom  = 1.0
script         = ExtResource(1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode    = 1
anchors_preset = 8
anchor_left    = 0.5
anchor_top     = 0.5
anchor_right   = 0.5
anchor_bottom  = 0.5
offset_left    = -160.0
offset_top     = -200.0
offset_right   = 160.0
offset_bottom  = 200.0
alignment      = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode          = 2
horizontal_alignment = 1
vertical_alignment   = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
layout_mode         = 2
custom_minimum_size = Vector2(0, 40)

[node name="OptionContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode                         = 2
theme_override_constants/separation = 20
alignment                           = 1

[node name="LanguageContainer" type="CenterContainer" parent="VBoxContainer/OptionContainer"]
layout_mode = 2

[node name="LanguageButton" type="TextureButton" parent="VBoxContainer/OptionContainer/LanguageContainer"]
custom_minimum_size = Vector2(280, 60)
layout_mode         = 2
script              = ExtResource(2)

[node name="AudioContainer" type="VBoxContainer" parent="VBoxContainer/OptionContainer"]
layout_mode                         = 2
theme_override_constants/separation = 20
alignment                           = 1

[node name="MusicContainer" type="CenterContainer" parent="VBoxContainer/OptionContainer/AudioContainer"]
layout_mode = 2

[node name="MusicButton" type="TextureButton" parent="VBoxContainer/OptionContainer/AudioContainer/MusicContainer"]
custom_minimum_size = Vector2(280, 60)
layout_mode         = 2
script              = ExtResource(2)

[node name="SFXContainer" type="CenterContainer" parent="VBoxContainer/OptionContainer/AudioContainer"]
layout_mode = 2

[node name="SFXButton" type="TextureButton" parent="VBoxContainer/OptionContainer/AudioContainer/SFXContainer"]
custom_minimum_size = Vector2(280, 60)
layout_mode         = 2
script              = ExtResource(2)

[node name="Spacer2" type="Control" parent="VBoxContainer"]
layout_mode         = 2
custom_minimum_size = Vector2(0, 20)

[node name="ResetScoresContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ResetScoresButton" type="TextureButton" parent="VBoxContainer/ResetScoresContainer"]
custom_minimum_size = Vector2(280, 60)
layout_mode         = 2
script              = ExtResource(2)

[node name="SuccessMessageContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode         = 2
custom_minimum_size = Vector2(0, 20)

[node name="Spacer3" type="Control" parent="VBoxContainer"]
layout_mode         = 2
custom_minimum_size = Vector2(0, 20)

[node name="BackContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="TextureButton" parent="VBoxContainer/BackContainer"]
custom_minimum_size = Vector2(280, 60)
layout_mode         = 2
script              = ExtResource(2)
